# WikiScout

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Domain-specific Agent Skills Guide.md  Domain-specific Agent Skills.md  EXAMPLES.md  MODERNIZATION.md  MODULE_REFERENCE.md  Makefile  PHASE2.md  README.md  SKILL.md  WPTOOLS_INTEGRATION_SUMMARY.md  agent.py  api.py  benchmark_async.py  cli.py  config.json  debug_cache.py  debug_cache2.py  debug_cache3.py  demo_test.py  docker-compose.yml  pyproject.toml  requirements.txt  test_comprehensive_validation.py  test_example.py  test_json_export.py  test_search_debug.py  test_search_debug2.py  test_wptools.py  test_wptools_integration.py  verify_complete.py
.github/workflows/: ci.yml
modules/: __init__.py  fetch.py  fetch_async.py  parse.py  search.py  summarize.py
test_cache/: TestArticle.json  TestPage.json
tests/: test_agent.py  test_api_async.py
